--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ node_js:
   - '5'
   - '6'
   - '7'
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 
 # fail asap when there is a failure
 matrix:
