--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
     "coveralls": "^2.11.16",
@@ -52,14 +53,16 @@
     "remark-react": "^4.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "core-js": "^2.4.1"
   },
   "babel": {
     "presets": [
       "babel-preset-es2015"
     ],
     "plugins": [
-      "add-module-exports"
+      "add-module-exports",
+      "transform-function-bind"
     ],
     "ignore": [
       "node_modules/*"
