--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
     "coveralls": "^2.11.16",
@@ -54,7 +53,6 @@
     "sinon": "^2.2.0"
   },
   "dependencies": {
-    "core-js": "^2.4.1",
     "lodash": "^4.17.4"
   },
   "babel": {
@@ -62,8 +60,7 @@
       "babel-preset-es2015"
     ],
     "plugins": [
-      "add-module-exports",
-      "transform-function-bind"
+      "add-module-exports"
     ],
     "ignore": [
       "node_modules/*"
