--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.22.0",
     "coveralls": "^2.11.16",
     "css-loader": "^0.28.1",
@@ -47,6 +48,8 @@
     "eslint-plugin-import": "^2.2.0",
     "npmpub": "^3.1.0",
     "nyc": "^10.1.2",
+    "react": "^15.5.4",
+    "react-test-renderer": "^15.5.4",
     "remark": "^7.0.1",
     "remark-html": "^6.0.0",
     "remark-react": "^4.0.0",
@@ -57,7 +60,8 @@
   },
   "babel": {
     "presets": [
-      "babel-preset-es2015"
+      "babel-preset-es2015",
+      "babel-preset-react"
     ],
     "plugins": [
       "add-module-exports"
