--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^4.1.3",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.22.0",
     "coveralls": "^2.11.16",
     "cross-env": "^5.0.0",
@@ -61,7 +62,8 @@
   },
   "babel": {
     "presets": [
-      "babel-preset-es2015"
+      "babel-preset-env",
+      "babel-preset-stage-2"
     ],
     "plugins": [
       "add-module-exports"
@@ -69,7 +71,8 @@
     "env": {
       "test": {
         "presets": [
-          "babel-preset-es2015",
+          "babel-preset-env",
+          "babel-preset-stage-2",
           "babel-preset-react"
         ],
         "plugins": [
