--- a/package.json
+++ b/package.json
@@ -122,6 +122,10 @@
         "error",
         2
       ],
+      "max-len": [
+        "error",
+        80
+      ],
       "quotes": [
         "error",
         "double",
