--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-test-renderer": "^15.5.4",
     "remark": "^7.0.1",
     "remark-html": "^6.0.0",
-    "remark-react": "^4.0.0"
+    "remark-react": "^4.0.0",
+    "vfile-reporter": "^3.0.0"
   },
   "dependencies": {
     "lodash": "^4.17.4"
