--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^4.1.3",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -67,7 +68,8 @@
       "babel-preset-stage-2"
     ],
     "plugins": [
-      "add-module-exports"
+      "add-module-exports",
+      "transform-function-bind"
     ],
     "env": {
       "test": {
@@ -77,7 +79,8 @@
           "babel-preset-react"
         ],
         "plugins": [
-          "istanbul"
+          "istanbul",
+          "transform-function-bind"
         ],
         "sourceMaps": "inline"
       }
