--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "vfile-reporter": "^3.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "core-js": "^2.4.1"
   },
   "babel": {
     "presets": [
