--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "pretest": "yarn lint -s",
     "test": "cross-env NODE_ENV=test ava",
     "test-with-coverage": "cross-env NODE_ENV=test nyc ava",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "release": "npmpub"
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -50,7 +49,6 @@
     "eslint-config-i-am-meticulous": "^6.0.1",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.3.0",
-    "npmpub": "^3.1.0",
     "nyc": "^11.0.2",
     "react": "^15.5.4",
     "react-test-renderer": "^15.5.4",
