chore: adjust package keywords

--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.2.1",
   "description": "!Extension\\[Content\\]\\(Argument\\)\\{Properties\\} -> :tada: — [commonmark generic directive extension](https://github.com/jgm/CommonMark/wiki/Generic-Directive-Extension-List) for remark",
   "keywords": [
-    "commonmark",
-    "generic",
-    "extensions",
-    "markdown",
     "remark",
+    "remark-plugin",
+    "markdown",
+    "commonmark",
     "html",
     "react"
   ],
