--- a/examples/react-toolbox-icon/package.json
+++ b/examples/react-toolbox-icon/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "deepmerge": "1.5.0",
     "hast-util-sanitize": "1.1.1",
-    "prop-types": "^15.5.10",
+    "prop-types": "15.5.10",
     "react": "15.5.3",
     "react-dom": "15.5.3",
     "react-toolbox": "2.0.0-beta.12",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "react-scripts": "1.0.0",
-    "react-toolbox-themr": "^1.0.2"
+    "react-toolbox-themr": "1.0.2"
   },
   "reactToolbox": {
     "include": [
