--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 - yarn config set no-progress
 - yarn global add greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
-script: yarn test-with-coverage
+script: yarn test
 after_script: greenkeeper-lockfile-upload
 after_success: yarn coverage
 deploy:
