--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-eslint": "^8.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -95,7 +96,8 @@
     ],
     "plugins": [
       "add-module-exports",
-      "transform-function-bind"
+      "transform-function-bind",
+      "transform-object-rest-spread"
     ],
     "env": {
       "test": {
