fix(module): fix already mapped properties not being detected

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   },
   "dependencies": {
     "core-js": "^2.5.1",
+    "deepmerge": "^1.5.1",
     "joi": "^10.6.0",
     "joi-browser": "^10.6.1"
   },
