--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,9 +58,7 @@ jobs:
 
       - persist_to_workspace:
           root: /usr/src/app
-          paths:
-            - dist/*
-            - .circleci/*
+          paths: .
 
   deploy-job:
     <<: *defaults
@@ -81,7 +79,10 @@ workflows:
   version: 2
   build:
     jobs:
-      - build-job
+      - build-job:
+          filters:
+            tags:
+              only: /^v.*/
       - deploy-job:
           requires:
             - build-job
