--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.4.2",
     "babel-plugin-add-module-exports": "^0.3.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -78,8 +79,13 @@
     "remark": "^9.0.0",
     "remark-html": "^8.0.0",
     "remark-react": "^4.0.1",
+    "remark-vue": "^0.9.2",
     "sinon": "^6.0.1",
-    "vfile-reporter": "^5.0.0"
+    "vfile-reporter": "^5.0.0",
+    "vue": "^2.5.17",
+    "vue-jest": "^2.6.0",
+    "vue-server-renderer": "^2.5.17",
+    "vue-template-compiler": "^2.5.17"
   },
   "dependencies": {
     "core-js": "^2.5.1",
@@ -121,6 +127,16 @@
     "testMatch": [
       "**/?(*.)test.js"
     ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest",
+      ".*\\.(vue)$": "vue-jest"
+    },
     "snapshotSerializers": [
       "jest-serializer-vue"
     ],
