--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "scripts": {
     "#<git hooks>": "handled by husky",
-    "precommit": "lint-staged",
     "#</git hooks>": "handled by husky",
     "build": "yarn build-server && yarn build-browser",
     "build-server": "babel --ignore /__tests__/ -d ./lib ./src",
@@ -171,5 +170,10 @@
   "prettier": {
     "printWidth": 80,
     "parser": "babylon"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
