chore(test): directly send `jest` coverage report to `coveralls`

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint": "eslint --fix ./src",
     "pretest": "yarn lint",
     "test": "cross-env NODE_ENV=test jest --runInBand",
-    "coverage": "nyc report --temp-directory=coverage --reporter=text-lcov | coveralls"
+    "coverage": "coveralls"
   },
   "repository": {
     "type": "git",
@@ -70,7 +70,6 @@
     "jest": "^23.5.0",
     "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^8.0.4",
-    "nyc": "^13.0.1",
     "prettier": "^1.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
