--- a/examples/react-toolbox-icon/package.json
+++ b/examples/react-toolbox-icon/package.json
@@ -2,7 +2,7 @@
   "name": "remark-generic-extensions-example-react-toolbox-icon",
   "description": "remark-react example with react-toolbox TooltipIcon",
   "version": "1.2.0",
-  "private": "true",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/medfreeman/remark-generic-extensions.git"
@@ -25,7 +25,7 @@
     "remark-react": "4.0.3"
   },
   "devDependencies": {
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.1.1",
     "react-toolbox-themr": "1.0.2"
   },
   "reactToolbox": {
@@ -41,5 +41,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
