--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   },
   "dependencies": {
     "core-js": "^2.5.1",
-    "deepmerge": "2.2.1",
+    "deepmerge": "^3.0.0",
     "joi": "^13.0.1",
     "joi-browser": "^13.0.1"
   },
