chore(package): pin `joi` and `joi-browser` dependencies to 13.4.0

--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
   "dependencies": {
     "core-js": "^2.5.1",
     "deepmerge": "^3.0.0",
-    "joi": "^13.0.1",
-    "joi-browser": "^13.0.1"
+    "joi": "13.4.0",
+    "joi-browser": "13.4.0"
   },
   "lint-staged": {
     "*.js": [
