--- a/examples/react-toolbox-icon/package.json
+++ b/examples/react-toolbox-icon/package.json
@@ -14,18 +14,18 @@
   },
   "homepage": "https://github.com/medfreeman/remark-generic-extensions/tree/master/examples/react-toolbox-icon#readme",
   "dependencies": {
-    "deepmerge": "2.2.1",
+    "deepmerge": "3.0.0",
     "hast-util-sanitize": "1.2.1",
     "prop-types": "15.6.2",
-    "react": "16.6.1",
-    "react-dom": "16.6.1",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "react-toolbox": "2.0.0-beta.13",
-    "remark": "10.0.0",
+    "remark": "10.0.1",
     "remark-generic-extensions": "1.3.0",
-    "remark-react": "4.0.3"
+    "remark-react": "5.0.1"
   },
   "devDependencies": {
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "react-toolbox-themr": "1.0.2"
   },
   "reactToolbox": {
@@ -44,7 +44,6 @@
   },
   "browserslist": [
     ">0.2%",
-    "not dead",
     "not ie <= 11",
     "not op_mini all"
   ]
