--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "scripts": {
     "#<git hooks>": "handled by husky",
     "#</git hooks>": "handled by husky",
-    "build": "yarn build:clean && yarn build-server && yarn build-browser",
-    "build:clean": "del lib && mkdirp lib",
-    "build-server": "babel --ignore src/**/__tests__/**/*.js,src/**/__tests__/**/*.jsx -d ./lib ./src",
+    "build": "run-s build:clean build:server build:browser",
+    "build:clean": "del lib; mkdirp lib",
+    "build:server": "babel --ignore src/**/__tests__/**/*.js,src/**/__tests__/**/*.jsx -d ./lib ./src",
+    "build:browser": "run-s build:browserify build:mangle",
+    "build:browserify": "browserify ./src/index.js --bare -t babelify -s remarkGenericExtensions > ./lib/browser.js",
+    "build:mangle": "esmangle ./lib/browser.js > ./lib/browser.min.js",
     "watch": "babel -w  --ignore src/**/__tests__/**/*.js,src/**/__tests__/**/*.jsx -d ./lib ./src",
-    "build-browser": "yarn build-browserify && yarn build-mangle",
-    "build-browserify": "browserify ./src/index.js --bare -t babelify -s remarkGenericExtensions > ./lib/browser.js",
-    "build-mangle": "esmangle ./lib/browser.js > ./lib/browser.min.js",
-    "prepublish": "yarn build",
+    "prepare": "yarn build",
     "lint": "eslint --fix ./src",
     "pretest": "yarn lint",
     "test": "cross-env NODE_ENV=test jest --runInBand",
@@ -74,6 +74,7 @@
     "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^8.0.4",
     "mkdirp": "^0.5.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
