chore(package): make remaining scripts cross-platform

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build:clean": "del lib; mkdirp lib",
     "build:server": "babel --ignore src/**/__tests__/**/*.js,src/**/__tests__/**/*.jsx -d ./lib ./src",
     "build:browser": "run-s build:browserify build:mangle",
-    "build:browserify": "browserify ./src/index.js --bare -t babelify -s remarkGenericExtensions > ./lib/browser.js",
-    "build:mangle": "esmangle ./lib/browser.js > ./lib/browser.min.js",
+    "build:browserify": "browserify ./src/index.js --bare -t babelify -s remarkGenericExtensions -o ./lib/browser.js",
+    "build:mangle": "esmangle -o ./lib/browser.min.js ./lib/browser.js",
     "watch": "babel -w  --ignore src/**/__tests__/**/*.js,src/**/__tests__/**/*.jsx -d ./lib ./src",
     "prepare": "yarn build",
     "lint": "eslint --fix ./src",
